--- a/puppet/Gemfile
+++ b/puppet/Gemfile
@@ -1,4 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'puppet-syntax'
-gem 'puppet', '~> 4.10'
+gem 'puppet', '~> 4.10', :require => false
+gem 'puppet-syntax', :require => false
+gem 'puppetlabs_spec_helper', :require => false
+gem 'rspec-puppet-facts', :require => false
