setup pollSCM and move logrotate into groovy

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_puppet.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/deploy_puppet.yaml
@@ -1,14 +1,11 @@
 - job:
     name: deploy_puppet
     project-type: workflow
-    logrotate:
-      numToKeep: 3
-    scm:
-      - foreman-infra
+    properties:
+      - github:
+          url: https://github.com/theforeman/foreman-infra
     triggers:
       - github
-      - pollscm:
-          cron: 'H/5 * * * *'
     dsl:
       !include-raw:
         - pipelines/release/deployPuppet.groovy
