--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: deploy_puppet
+    name: puppet-deploy
     project-type: workflow
     properties:
       - github:
@@ -8,6 +8,6 @@
       - github
     dsl:
       !include-raw:
-        - pipelines/release/deployPuppet.groovy
+        - pipelines/release/puppetDeploy.groovy
     publishers:
       - ircbot_freenode
