puppet-deploy - fix github polling once and for all?

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/puppet-deploy.yaml
@@ -6,6 +6,8 @@
           url: https://github.com/theforeman/foreman-infra
     triggers:
       - github
+      - pollscm:
+          cron: 'H/5 * * * *'
     dsl:
       !include-raw:
         - pipelines/release/puppetDeploy.groovy
