Update the forklift git URL

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/forklift.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/scm/forklift.yaml
@@ -2,7 +2,7 @@
     name: forklift
     scm:
       - git:
-          url: git://github.com/katello/forklift.git
+          url: https://github.com/theforeman/forklift.git
           wipe-workspace: true
           branches:
             - 'master'
