Use gitrelease on rpm scratch builds

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_test_pull_request.yaml
@@ -48,6 +48,7 @@
         - project: packaging_build_rpm
           block: true
           predefined-parameters: |
+            gitrelease=true
             scratch=true
             branch=${ghprbTargetBranch}
             pr_number=${ghprbPullId}
