--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging/foreman-packaging-rpm-pr-test.yaml
@@ -10,6 +10,8 @@
           context: 'rpm'
     dsl:
       !include-raw:
+        - pipelines/test/rpm_packaging.groovy
         - pipelines/lib/rpm_packaging.groovy
+        - pipelines/lib/koji.groovy
         - pipelines/lib/git.groovy
         - pipelines/lib/obal.groovy
