Limit vagrant jobs to hosts with ipv6
Because we provision on Rackspace (which has IPv6) and the
vagrant-openstack-plugin can't decide which IP it should use, we pin to
nodes with IPv6.

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-discovery-image-publish.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-discovery-image-publish.yaml
@@ -1,6 +1,6 @@
 - job:
     name: foreman-discovery-image-publish
-    node: 'admin && el && sshkey'
+    node: 'admin && el && sshkey && ipv6'
     logrotate:
       daysToKeep: 90
       numToKeep: 30
