--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
@@ -1,6 +1,6 @@
 - job:
     name: systest_foreman
-    node: 'el'
+    node: 'el && ipv6'
     concurrent: true
     logrotate:
       daysToKeep: 8
