--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/systest_foreman.yaml
@@ -46,4 +46,4 @@
           default: ''
           description: 'Verifies the installed version of Foreman packages matches this value, if set.'
     publishers:
-      - systest_foreman
+      - systest
