--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-systest.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: foreman-mysql-systest-temp
+    name: foreman-mysql-systest
     node: 'el && ipv6'
     project-type: matrix
     logrotate:
@@ -29,6 +29,6 @@
     wrappers:
       - abort_build:
           timeout_min: 60
-#   publishers:
-#     - ircbot_freenode
-#     - systest
+    publishers:
+      - ircbot_freenode
+      - systest
