--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -3,20 +3,11 @@
     scm:
       - git:
           url: git://github.com/katello/bastion.git
+          per-build-tag: true
           wipe-workspace: true
           basedir: 'plugin'
           branches:
             - '${branch}'
-
-- builder:
-    name: test_bastion_javascript
-    builders:
-      - shell: !include-raw: scripts/test/test_bastion_javascript.sh
-
-- builder:
-    name: test_bastion_assets_precompile
-    builders:
-      - shell: !include-raw: scripts/test/test_bastion_assets_precompile.sh
 
 - job:
     name: test_bastion_javascript
@@ -37,7 +28,7 @@
       - bastion
     builders:
       - plugin_pr_checkout
-      - test_bastion_javascript
+      - shell: !include-raw: scripts/test/test_bastion_javascript.sh
     publishers:
       - cobertura:
           report-file: 'plugin/coverage/**/cobertura-coverage.xml'
@@ -59,7 +50,8 @@
           url: https://github.com/katello/bastion
     scm:
       - git:
-          url: https://github.com/katello/bastion
+          url: git://github.com/katello/bastion.git
+          per-build-tag: true
           wipe-workspace: true
           basedir: 'plugin'
           branches:
@@ -96,22 +88,9 @@
           name: branch
           default: master
           description: 'The branch to build against.'
-      - string:
-          name: pr_number
-          description: 'Katello GitHub PR number to merge, or a URL to a patch file to apply directly'
-      - string:
-          name: pr_git_url
-          description:  'Katello Git URL to PR to test, e.g. git://github.com/user/foo.git'
-      - string:
-          name: pr_git_ref
-          description: 'Katello Git ref for PR to test, usually the branch name.'
+      - pr_parameters
     scm:
-      - git:
-          url: https://github.com/Katello/bastion
-          branches:
-            - ${branch}
-          basedir: plugin
-          per-build-tag: true
+      - bastion
     auth-token: ${pullRequestScannerAuthToken}
     triggers:
       - scm_fifteen_minutes
@@ -153,28 +132,20 @@
             pr_number=${pr_number}
 
 - job:
-    name: test_bastion_assets_precompile2
+    name: test_bastion_assets_precompile
     project-type: matrix
     description: 'Run Bastion assets precompile to ensure assets can be generated properly for production.'
     logrotate:
       daysToKeep: 30
       numToKeep: -1
     builders:
-      - test_bastion_assets_precompile
+      - shell: !include-raw: scripts/test/test_bastion_assets_precompile.sh
     parameters:
       - string:
           name: branch
           default: master
           description: 'The branch to build against.'
-      - string:
-          name: pr_number
-          description: 'Katello GitHub PR number to merge, or a URL to a patch file to apply directly'
-      - string:
-          name: pr_git_url
-          description:  'Katello Git URL to PR to test, e.g. git://github.com/user/foo.git'
-      - string:
-          name: pr_git_ref
-          description: 'Katello Git ref for PR to test, usually the branch name.'
+      - pr_parameters
       - string:
           name: foreman_pr_git_url
           description: 'Foreman Git URL to PR to test, e.g. git://github.com/user/foo.git'
@@ -185,12 +156,7 @@
           name: base_foreman_branch
           default: develop
     scm:
-      - git:
-          url: https://github.com/Katello/bastion
-          branches:
-            - ${branch}
-          basedir: plugin
-          per-build-tag: true
+      - bastion
     axes:
       - axis:
           type: user-defined
