--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -93,11 +93,17 @@
           description: 'The branch to build against.'
       - pr_parameters
     scm:
-      - bastion
-    auth-token: ${pullRequestScannerAuthToken}
+      - git:
+          url: git://github.com/katello/bastion.git
+          per-build-tag: true
+          wipe-workspace: true
+          basedir: 'plugin'
+          branches:
+            - '${ghprbActualCommit}'
+          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
     triggers:
-      - scm_fifteen_minutes
-      - github
+      - github_pr:
+          context: bastion
     builders:
       - conditional-step:
           condition-kind: strings-match
