missing `-sytest` at the end of umask systest job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-umask-077-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-umask-077-systest.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: foreman-umask-077
+    name: foreman-umask-077-systest
     node: 'el && ipv6'
     project-type: matrix
     logrotate:
