--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/packaging_build_deb_dependency.yaml
@@ -17,7 +17,6 @@
           values:
           - jessie
           - stretch
-          - trusty
           - xenial
       - axis:
           type: slave
@@ -32,7 +31,7 @@
           values:
           - debian
     execution-strategy:
-      combination-filter: '((onlyos == "all") || onlyos == os) && !((version != "1.15" || (arch == "armv7" || arch == "armv8")) && os == "trusty") && !((version != "1.15" && version != "1.16") && os == "jessie") && !((version == "1.15") && os == "stretch")'
+      combination-filter: '((onlyos == "all") || onlyos == os) && !(version != "1.16" && os == "jessie")'
     builders:
       - build_deb_dependency
     publishers:
