--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_hammer_cli_foreman_pull_request.yaml
@@ -2,6 +2,7 @@
     name: test_hammer_cli_foreman_pull_request
     description: |
       Test a Hammer CLI (Foreman) pull request under each Ruby version.
+    project-type: matrix
     concurrent: true
     logrotate:
       daysToKeep: 45
