--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/properties/github_katello.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/properties/github_katello.yaml
@@ -2,4 +2,4 @@
     name: github_katello
     properties:
       - github:
-          url: https://github.com/katello/katello
+          url: https://github.com/Katello/katello
