_javascript couldn't get the PR ref it was handed from _pull_request

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -8,6 +8,7 @@
           basedir: 'plugin'
           branches:
             - '${branch}'
+          refspec: '+refs/heads/*:refs/remotes/origin/* +refs/pull/*:refs/remotes/origin/pr/*'
 
 - job:
     name: test_bastion_javascript
