test_kafo_parsers_master* - we don't tags or pr_parameters

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_kafo_parsers_master_pull_request.yaml
@@ -9,19 +9,16 @@
     properties:
       - github:
           url: https://github.com/theforeman/kafo_parsers
-    parameters:
-      - pr_parameters
     scm:
       - git:
           url: https://github.com/theforeman/kafo_parsers
-          per-build-tag: true
           wipe-workspace: true
           branches:
             - '${ghprbActualCommit}'
           refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
     triggers:
       - github_pr:
-          context: kafo
+          context: kafo_parsers
     axes:
       - axis:
           type: user-defined
