--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
@@ -2,6 +2,7 @@
     name: test_proxy_develop_pr_core
     description: |
       Tests a Smart Proxy pull request under each Ruby and Puppet configuration.
+    project-type: matrix
     concurrent: true
     logrotate:
       daysToKeep: 45
@@ -9,20 +10,17 @@
     properties:
       - github:
           url: https://github.com/theforeman/smart-proxy/
-    parameters:
-      - pr_parameters
-      - string:
-          name: branch
-          default: develop
-          description: |
-            Base branch to merge PR into
     scm:
       - git:
           url: https://github.com/theforeman/smart-proxy/
           wipe-workspace: true
           prune: true
           branches:
-            - 'project/${branch}'
+            - '${ghprbActualCommit}'
+          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
+    triggers:
+      - github_pr:
+          context: core
     axes:
       - axis:
           type: user-defined
@@ -36,23 +34,13 @@
           type: user-defined
           name: puppet
           values:
-            - 3.4.0
-            - 3.8.0
-            - 4.2.0
-            - 4.4.0
-    execution-strategy:
-      combination-filter: '!( (ruby ==~ /2\.[^0]*/ && puppet ==~ /3\.[0-4].*/) || (ruby ==~ /2\.[2-9].*/ && puppet ==~ /3.*/) || (ruby ==~ /2\.[3-9].*/ && puppet ==~ /4\.[0-3].*/) )'
+            - 4.10.0
     wrappers:
       - timeout:
           type: absolute
           timeout: 15
           abort: true
     builders:
-      - shell: |
-          #!/bin/bash -ex
-          git remote add pr ${pr_git_url}
-          git fetch pr
-          git merge pr/${pr_git_ref}
       - shell: !include-raw: scripts/test/test_proxy_develop_pr_core.sh
     publishers:
       - gemset_cleanup
