--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_rubocop.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_rubocop.yaml
@@ -2,6 +2,7 @@
     name: test_proxy_develop_pr_rubocop_temp
     description: |
       Run Rubocop tests against develop branch on PR.
+    project-type: matrix
     concurrent: true
     logrotate:
       daysToKeep: 45
@@ -9,20 +10,23 @@
     properties:
       - github:
           url: https://github.com/theforeman/smart-proxy
-    parameters:
-      - pr_parameters
-      - string:
-          name: branch
-          default: develop
-          description: |
-            Base branch to merge PR into
     scm:
       - git:
           url: https://github.com/theforeman/smart-proxy
           wipe-workspace: true
           prune: true
           branches:
-            - 'upstream/${branch}'
+            - '${ghprbActualCommit}'
+          refspec: '+refs/pull/${ghprbPullId}/*:refs/remotes/origin/pr/${ghprbPullId}/*'
+    triggers:
+      - github_pr:
+          context: rubocop
+    axes:
+      - axis:
+          type: user-defined
+          name: ruby
+          values:
+            - 2.4
     wrappers:
       - timeout:
           type: likely-stuck
@@ -31,11 +35,6 @@
           timeout-var: 'BUILD_TIMEOUT'
           write-description: "Build timed out (after ${BUILD_TIMEOUT} minutes). Marking the build as aborted."
     builders:
-      - shell: |
-          #!/bin/bash -ex
-          git remote add pr ${pr_git_url}
-          git fetch pr
-          git merge pr/${pr_git_ref}
       - shell: !include-raw: scripts/test/test_proxy_develop_pr_rubocop.sh
     publishers:
       - checkstyle:
