mysql-systest - denote that it's nightly

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-nightly-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-mysql-nightly-systest.yaml
@@ -1,5 +1,5 @@
 - job:
-    name: foreman-mysql-systest
+    name: foreman-mysql-nightly-systest
     node: 'el && ipv6'
     project-type: matrix
     logrotate:
