disable foreman-puppet-nightly-systest

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-nightly-systest.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/foreman-puppet-nightly-systest.yaml
@@ -1,5 +1,6 @@
 - job:
     name: foreman-puppet-nightly-systest
+    disabled: true
     node: 'el && ipv6'
     project-type: matrix
     logrotate:
