--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/release_nightly_test_deb.yaml
@@ -21,7 +21,7 @@
     builders:
       - systest:
           repo: nightly
-          repo_environment: release
+          repo_environment: staging
           pl_puppet: ''
           run_hammer_tests: false
           db_type: ''
