--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/test_proxy_develop_pr_core.yaml
@@ -34,7 +34,13 @@
           type: user-defined
           name: puppet
           values:
+            - 3.4.0
+            - 3.8.0
+            - 4.2.0
+            - 4.4.0
             - 4.10.0
+    execution-strategy:
+      combination-filter: '!( (ruby ==~ /2\.[^0]*/ && puppet ==~ /3\.[0-4].*/) || (ruby ==~ /2\.[2-9].*/ && puppet ==~ /3.*/) || (ruby ==~ /2\.[3-9].*/ && puppet ==~ /4\.[0-3].*/) )'
     wrappers:
       - timeout:
           type: absolute
