Typo rubygems should be ruby for bastion job

--- a/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
+++ b/puppet/modules/jenkins_job_builder/files/theforeman.org/yaml/jobs/plugins/bastion.yaml
@@ -169,9 +169,9 @@
     axes:
       - axis:
           type: user-defined
-          name: rubygems
+          name: ruby
           values:
-            - 2.2
+            - 2.4
     wrappers:
       - timeout:
           elastic-percentage: 200
